// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxToastHeader customize 1`] = `
<div>
  <div
    class="toast-header bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxToastHeader component 1`] = `
<div>
  <div
    class="toast-header"
  >
    Test
  </div>
</div>
`;
